--- a/ccg websitefrontend/index.html
+++ b/ccg websitefrontend/index.html
@@ -194,10 +194,10 @@
 
     
     
-    <a href="tel:+254-706-278-553" class="phoneno"><img class="phoneicon" src="icons/phone.svg" ></img> &nbsp;+254 706 278 553</a>
+    <a href="tel:+254-738-3080-00" class="phoneno"><img class="phoneicon" src="icons/phone.svg" ></img> &nbsp;+254 738 3080 00</a>
 
-    <a href="mailto: ndedaanaco@gmail.com" class="email"><img class='emailicon' src='icons/email.svg'></img> &nbsp;&nbsp;
-        ndedaanaco@gmail.com</a>
+    <a href="calvarylcgithurai@gmail.com" class="email"><img class='emailicon' src='icons/email.svg'></img> &nbsp;&nbsp;
+        calvarylcgithurai@gmail.com</a>
     <h1 class="copyright">© 2020 CCG.All Rights Reserved</h1>
 
 
