--- a/ccg websitefrontend/index.html
+++ b/ccg websitefrontend/index.html
@@ -13,7 +13,7 @@
         <title>Calvary Chapel Githurai</title>
     </head>
     <body>
-        <nav id="NAVbar" class="navbar fixed-top">
+        <nav id="NAVbar" style="padding: 0; margin: 0; padding-top: 0;" class="navbar fixed-top">
             <div class="firefly">Calvary Chapel Githurai</div>
             
             <div class="links">
@@ -41,9 +41,9 @@
         </nav>
 
         <div class="background">
-            <section>
-              <h1>welcome to Calvary</h1>
-            </section>
+            <div class="homediv">
+              <h1 >welcome to Calvary</h1>
+            </div>
 
         </div>
         <div class="slideup ">
